--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "nextjs-template",
-  "version": "0.1.0",
+  "name": "apex-v2",
+  "version": "0.0.0",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "next": "^16.1.3",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "db:generate": "turbo run db:generate",
+    "db:push": "turbo run db:push",
+    "db:studio": "turbo run db:studio"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "@types/node": "^24.10.2",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@tailwindcss/postcss": "^4.1.17",
-    "tailwindcss": "^4.1.17",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.0"
-  }
+    "turbo": "latest",
+    "prettier": "latest"
+  },
+  "packageManager": "bun@1.2.0"
 }
